--- a/application/deploy_app.yaml
+++ b/application/deploy_app.yaml
@@ -13,6 +13,8 @@ metadata:
   labels:
     name: external-access
 spec:
+  selector:
+    name: web-server
   ports:
     - port: 80
       targetPort: 8080
@@ -46,6 +48,10 @@ data:
   POSTGRES_DB: userdata
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: postgres
+  POSTGRES_HOST: db-service
+  POSTGRES_PORT: 5432
+  SECRET_KEY: STRONG_SECRET_KEY
+  SECURITY_PASSWORD_SALT: 85921750882375481378597238578
 
 ---
 apiVersion: v1
@@ -107,7 +113,7 @@ spec:
     spec:
       containers:
         - name: db-cont
-          image: khushangsingla/random
+          image: khushangsingla/kkkluster_db:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 5432
@@ -123,3 +129,32 @@ spec:
           persistentVolumeClaim:
             claimName: db-data-claim
 
+---
+
+kind: Deployment
+apiVersion: apps/v1
+metadata:
+  namespace: kkkluster
+  name: web-deployment
+  labels:
+    name: web-server
+spec:
+  selector:
+    matchLabels:
+      app: web_flask_app
+  template:
+    metadata:
+      labels:
+        name: web-server
+        app: web_flask_app
+    spec:
+      containers:
+        - name: web-cont
+          image: khushangsingla/kkkluster_web:latest
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 80
+              hostPort: 14080
+          envFrom:
+            - configMapRef:
+                name: db-secret
