--- a/application/deploy_app.yaml
+++ b/application/deploy_app.yaml
@@ -13,11 +13,13 @@ metadata:
   labels:
     name: external-access
 spec:
+  externalIPs:
+    - "10.130.5.172"
   selector:
     name: web-server
   ports:
-    - port: 14080
-      targetPort: 14080
+    - port: 80
+      targetPort: 80
 
 ---
 
@@ -49,9 +51,7 @@ data:
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: postgres
   POSTGRES_HOST: db-service
-  POSTGRES_PORT: 5432
   SECRET_KEY: STRONG_SECRET_KEY
-  SECURITY_PASSWORD_SALT: 85921750882375481378597238578
 
 ---
 apiVersion: v1
@@ -150,11 +150,14 @@ spec:
     spec:
       containers:
         - name: web-cont
-          image: khushangsingla/kkkluster_web:latest
+          image: khushangsingla/kkkluster_webserver:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 80
-              hostPort: 14080
+              hostPort: 80
+          env:
+            - name: POSTGRES_PORT
+              value: "5432"
           envFrom:
             - configMapRef:
                 name: db-secret
